--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -81,8 +81,47 @@
   footer ul:nth-of-type(2) {
     margin-top: 5%;
   }
+
   .main-nav {
-    display: none;
+    display: none; /************************/
+  }
+
+  nav {
+  }
+
+  .main-nav {
+    float: left;
+    margin: 30px 0 0 30px;
+  }
+
+  .main-nav li {
+    display: block;
+    padding-bottom: 10px;
+  }
+
+  .main-nav li a:link,
+  .main-nav li a:visited {
+    border: none; /* or: border: 0;*/
+  }
+
+  .moblie-nav-icon {
+    display: block;
+    float: right;
+    margin: 10px 30px 0 0;
+  }
+
+  /*--------------------------*/
+
+  .sticky-header .moblie-nav-icon {
+    margin-top: 10px;
+  }
+
+  .sticky-header .moblie-nav-icon i {
+    color: #555;
+  }
+
+  .sticky-header .logo-black {
+    margin-top: 10px;
   }
 }
 
