--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,10 +1,12 @@
 @media only screen and (max-width: 1200px) {
+  body {
+  }
   .hero-text-box {
-    width: 100%;
-    margin: 0 2%;
+    width: 80%;
+    padding: 0 2%;
   }
   .row {
-    margin: 0 2%;
+    padding: 0 2%;
   }
 }
 
@@ -48,8 +50,28 @@
 }
 
 @media only screen and (max-width: 767px) {
+  body {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 180%;
+  }
+
+  h2 {
+    font-size: 150%;
+  }
+
+  h3 {
+    font-size: 90%;
+  }
+
+  .hero-text-box {
+  }
+
   .col {
     width: 100%;
+    margin: 0 0 4% 0;
   }
   .app-screen {
     width: 30%;
@@ -62,7 +84,7 @@
   }
   .city-description-entery,
   .city-entery h3 {
-    width: 100%;
+    width: 70%;
     margin-left: 30%;
   }
   .card {
