--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,8 @@
   padding: 0;
 }
 
-html {
+html,
+body {
   font-family: "Lato", Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 20px;
